Sidebar was not showing on some pages so I fixed that. Added more trails.

--- a/AppBuilder9000/HikingFunApp/static/HikingFunApp/css/layout.css
+++ b/AppBuilder9000/HikingFunApp/static/HikingFunApp/css/layout.css
@@ -317,6 +317,7 @@ td{
     color: white;
     font-family: "Helvetica";
     text-shadow: 0 2px 2px rgba(20, 65, 255, 0.9);
+    text-align: left;
 }
 
 .s_bar{
